# Open62541

./: .gitignore  CMakeLists.txt  README.md
Client_OPCUA/: CMakeLists.txt  Parameters.txt  client.yuml  main.cpp
Client_OPCUA/libraries/: retreiveValues.cpp  retreiveValues.h  saveValues.cpp  saveValues.h
Server_OPCUA/: CMakeLists.txt  PumpVariables.h  main.cpp  pumpVariables.cpp  pumpVariables.h  server.yuml  temperature_change.cpp
